unpackaged/main/default/objects/Paquete__c/Paquete__c.object-meta.xml
<CustomObject>
    <label>Paquete / Producto Vivienda de Venta</label>
    <nameField>
        <label>Producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paquetes / Productos Vivienda de Venta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>