unpackaged/main/default/objects/Paquete__c/fields/Paquete__c.field-meta.xml
<CustomField>
    <fullName>Paquete__c</fullName>
    <label>Paquete</label>
    <length>100</length>
    <type>Text</type>
</CustomField>