unpackaged/main/default/objects/Paquete__c/fields/Total_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Formula__c</fullName>
    <formula>Cantidad__c * Precio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>