unpackaged/main/default/objects/Paquete__c/fields/Venta_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Venta_Buscar__c</fullName>
    <label>Venta</label>
    <referenceTo>Venta__c</referenceTo>
    <relationshipLabel>Paquetes / Productos Vivienda de Venta</relationshipLabel>
    <relationshipName>Paquetes_Productos_Vivienda_de_Venta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>